# resume_screener

./: .gitignore  ARCHITECTURE.md  BATCH_PROCESSING.md  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  Makefile  README.md  SIMPLE_SETUP.md  batch_gladio_app.py  batch_resume_screener.py  env_example.txt  example_job_urls.csv  gladio_app.py  job_scraper.py  pyproject.toml  resume_screener.py  setup.py  simple_gladio_app.py  simple_resume_screener.py  test_real_jobs.csv  test_system.py  unified_resume_screener.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
